--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "concurrently \"npm:serve:*\" -k",
+    "serve": "concurrently \"npm:serve:*\" -k --host localhost",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint api src",
     "serve:client": "vue-cli-service serve",
     "serve:server": "nodemon api --ignore src/ -e js,html,css"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "cross-env": "~3.1.3",
     "dayjs": "^1.8.29",
