--- a/package.json
+++ b/package.json
@@ -3,45 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "concurrently \"npm:serve:*\" -k",
+    "serve": "concurrently \"npm:serve:*\" -k --host localhost",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint api src",
     "serve:client": "vue-cli-service serve",
     "serve:server": "nodemon api --ignore src/ -e js,html,css"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "core-js": "^3.6.5",
+    "axios": "^0.24.0",
+    "core-js": "^3.20.0",
     "cross-env": "~3.1.3",
-    "dayjs": "^1.8.29",
+    "dayjs": "^1.10.7",
     "dotenv": "~2.0.0",
     "express": "~4.16.4",
     "moment": "~2.23.0",
-    "moment-timezone": "^0.5.31",
-    "nodemon": "^2.0.4",
-    "vue": "^3.0.0-rc.2",
-    "vue-router": "^4.0.0-alpha.6"
+    "moment-timezone": "^0.5.34",
+    "nodemon": "^2.0.15",
+    "vue": "^3.2.26",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.4.3",
-    "@vue/cli-plugin-eslint": "^4.4.3",
-    "@vue/cli-plugin-router": "^4.4.3",
-    "@vue/cli-service": "^4.4.3",
-    "@vue/compiler-sfc": "^3.0.0-rc.2",
+    "@vue/cli-plugin-babel": "^4.5.15",
+    "@vue/cli-plugin-eslint": "^4.5.15",
+    "@vue/cli-plugin-router": "^4.5.15",
+    "@vue/cli-service": "^4.5.15",
+    "@vue/compiler-sfc": "^3.2.26",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
-    "concurrently": "^5.2.0",
+    "concurrently": "^5.3.0",
     "eslint": "^6.7.2",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^7.0.0-alpha.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^4.1.0",
+    "eslint-plugin-vue": "^7.20.0",
     "prettier": "^1.19.1",
-    "sass": "^1.26.8",
-    "sass-loader": "^8.0.2",
-    "vue-cli-plugin-vue-next": "~0.1.3"
+    "sass": "^1.45.0",
+    "sass-loader": "^8.0.2"
   }
 }
